@@ -10,7 +10,7 @@ $inno=$_POST['inno'];/*the number of textareas to expect*/
 $incom='';
 $tid=$_SESSION['username'];
 
-			trigger_error('INNO: '.$inno,E_USER_WARNING);
+//trigger_error('INNO: '.$inno,E_USER_WARNING);
 
 if($sub=='Cancel'){
 	$openerId='-100';
@@ -30,7 +30,7 @@ $addcategory=='no';
 		if(isset($_POST['incom'.$c])){
 			//$incom.=clean_text($_POST['incom'.$c]);
 			$incom.=$_POST['incom'.$c];
-			trigger_error($c.' '.$incom,E_USER_WARNING);
+			//trigger_error($c.' '.$incom,E_USER_WARNING);
 			}
 		/* Separate the subcomments with ::: for splitting 
 		 * but last subcomment should not get a separator
