@@ -11,11 +11,15 @@ Use xmlreader for subcomments on reports.
 
 Moved from deprecated PHP function eregi to preg_match.
 
-Changed send_email_to function to allow using the user's email as
-from address.
+Changed send_email_to function to allow using the user's email as from
+address.
 
 Pulled out email to teachers as its own function and used across
 comments, incidents and merits.
+
+Added a generic message from Report for parent access details to their
+epfortolio.
+
 
 
 Version ClaSS-0.9.32 release (2011/01/17)
